# src/httpServer.go
@@ -697,6 +697,7 @@ func InitServer() *mux.Router {
 	srapiAdmin.HandleFunc("/api/constellation/logs", constellation.API_GetLogs)
 	srapiAdmin.HandleFunc("/api/constellation/block", constellation.DeviceBlock)
 	srapiAdmin.HandleFunc("/api/constellation/ping", constellation.API_Ping)
+	srapiAdmin.HandleFunc("/api/constellation/nats-status", constellation.API_NATSStatus)
 	srapiAdmin.HandleFunc("/api/constellation/tunnels", constellation.TunnelList)
 	srapiAdmin.HandleFunc("/api/constellation/edit-device", constellation.DeviceEdit_API)
 	srapiAdmin.HandleFunc("/api/constellation/get-next-ip", constellation.API_GetNextIP)
